--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
           "test": "test"
      },
      "scripts": {
-          "test": "jest --coverage"
+          "test": "jest --coverage",
+          "md-links": "node index.js"
      },
      "repository": {
           "type": "git",
@@ -37,6 +38,7 @@
      },
      "dependencies": {
           "chalk": "^4.1.2",
+          "chalk-ex": "^1.0.1",
           "figlet": "^1.5.2",
           "marked": "^4.2.4"
      }
